[package]
name = "clscreate_rs"
version = "0.1.0"
authors = ["Ethan Smith <ethan@ethanhs.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clscreate_rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]